k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: recrute
  labels:
    name: recrute
    environment: production
