k8s/authentication-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication
  namespace: recrute
  labels:
    app: authentication
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: authentication
  template:
    metadata:
      labels:
        app: authentication
        tier: backend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8081"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - name: authentication
          image: hajmabroukwafa/recrute-auth-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
              name: http
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 90
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 10
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: authentication
  namespace: recrute
  labels:
    app: authentication
spec:
  selector:
    app: authentication
  ports:
    - port: 8081
      targetPort: 8081
      name: http
      protocol: TCP
  type: ClusterIP
