k8s/candidate-service-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: candidate-service
  namespace: recrute
  labels:
    app: candidate-service
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: candidate-service
  template:
    metadata:
      labels:
        app: candidate-service
        tier: backend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8082"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - name: candidate-service
          image: hajmabroukwafa/recrute-candidate-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8082
              name: http
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 90
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 60
            periodSeconds: 10
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: candidate-service
  namespace: recrute
  labels:
    app: candidate-service
spec:
  selector:
    app: candidate-service
  ports:
    - port: 8082
      targetPort: 8082
      name: http
      protocol: TCP
  type: ClusterIP
